--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -6,4 +6,8 @@
     <item android:id="@+id/discoverable"
         android:icon="@android:drawable/ic_menu_mylocation"
         android:title="@string/discoverable" />
+
+    <item android:id="@+id/calling"
+        android:icon="@android:drawable/ic_menu_mylocation"
+        android:title="Make a Call" />
 </menu>
